test/gpu/native/assertOnFailToGpuize.5.good
warning: The prototype GPU support implies --no-checks. This may impact debuggability. To suppress this warning, compile with --no-checks explicitly
assertOnFailToGpuize.chpl:48: error: Loop containing assertOnGpu() is not Gpuizable
assertOnFailToGpuize.chpl:50: note: call has outer var access
